// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
Object {
  "ID": "widget",
  "__data__": Object {},
  "html": "<input>",
  "nodes": Array [
    Object {
      "ID": undefined,
      "__data__": null,
      "html": null,
      "nodes": null,
      "options": null,
    },
  ],
  "options": Object {
    "actionSequence": Array [
      "render",
      "bindEvents",
    ],
    "placeholder": "",
    "renderAsync": false,
    "renderDependence": Array [],
    "tabindex": 1,
    "types": Array [],
  },
}
`;

exports[`renders correctly 2`] = `
Object {
  "ID": "widget",
  "__data__": Object {
    "actionSequence": Array [
      "render",
      "bindEvents",
    ],
    "placeholder": "",
    "renderAsync": false,
    "renderDependence": Array [],
    "tabindex": 1,
    "types": Array [],
  },
  "html": "<input placeholder=\\"\\" tabindex=\\"1\\">",
  "nodes": Array [
    Object {
      "ID": undefined,
      "__data__": null,
      "html": null,
      "nodes": null,
      "options": null,
    },
  ],
  "options": Object {
    "actionSequence": Array [
      "render",
      "bindEvents",
    ],
    "placeholder": "",
    "renderAsync": false,
    "renderDependence": Array [],
    "tabindex": 1,
    "types": Array [],
  },
}
`;

exports[`with props 1`] = `
Object {
  "ID": "widget",
  "__data__": Object {
    "actionSequence": Array [
      "render",
      "bindEvents",
    ],
    "id": "expression-input",
    "name": "expression",
    "placeholder": "a && b",
    "renderAsync": false,
    "renderDependence": Array [],
    "tabindex": 2,
    "types": Array [],
  },
  "html": "<input id=\\"expression-input\\" placeholder=\\"a &amp;&amp; b\\" tabindex=\\"2\\" name=\\"expression\\">",
  "nodes": Array [
    Object {
      "ID": undefined,
      "__data__": null,
      "html": null,
      "nodes": null,
      "options": null,
    },
  ],
  "options": Object {
    "actionSequence": Array [
      "render",
      "bindEvents",
    ],
    "placeholder": "",
    "renderAsync": false,
    "renderDependence": Array [],
    "tabindex": 1,
    "types": Array [],
  },
}
`;
